[gd_scene load_steps=8 format=3 uid="uid://4273yrwy70rg"]

[ext_resource type="Script" path="res://scripts/bosses/second_boss.gd" id="1_ngmsq"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="5_f1nte"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="6_vos7v"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="7_ngnou"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(32, 32)

[node name="SecondGuardian" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_ngmsq")
exp_value = 190
base_fire_interval = 2.0
min_fire_interval = 1.3
base_hp = 45
max_hp = 70
hp_per_level = 5
base_speed = 112
max_speed = 192
speed_per_level = 16
base_power = 2
max_power = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("5_f1nte")]
visible = false
collision_layer = 32
collision_mask = 0
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("6_vos7v")]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("7_ngnou")
metadata/_edit_use_anchors_ = true

[node name="Body" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Body"]

[node name="Polygon2D2" type="Polygon2D" parent="Body"]

[node name="Polygon2D3" type="Polygon2D" parent="Body"]

[node name="Polygon2D4" type="Polygon2D" parent="Body"]

[node name="Polygon2D5" type="Polygon2D" parent="Body"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
